# sp-api-mcp-server

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
specs/001-sp-api-mcp/: plan.md  spec.md  tasks.md
src/sp_api_mcp/: __init__.py  config.py  models.py  server.py
src/sp_api_mcp/auth/: ads.py  lwa.py
src/sp_api_mcp/client/: __init__.py
src/sp_api_mcp/gateway/: __init__.py
src/sp_api_mcp/tools/: __init__.py  advertising.py  catalog.py  feeds.py  inventory.py  orders.py  pricing.py  reports.py
tests/: conftest.py  test_auth.py  test_client_retry.py  test_gateway.py  test_models.py  test_rdt.py  test_tools_advertising.py  test_tools_orders.py
