[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sp-api-mcp"
version = "0.1.0"
description = "Amazon SP-API MCP Server — 把订单/库存/广告/报表/Feed 封装为 MCP 工具（跨境电商 AI 工作流的高速公路地基）"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "boto3>=1.34",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]
[project.optional-dependencies]
test = ["pytest>=8", "respx>=0.20"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
